--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -1325,14 +1325,49 @@ for $1\leq a<b<c<d\leq n+3$, ({\bf Zhenjie}: I conjecture that) we find the most
     &F_{1c}+F_{b,n+3}-F_{bc}=\sum_{1\leq p<b\atop{c\leq q<n+3}}c_{pq}\quad \text{for $a=1$ and $d=n+3$}
 \end{align*}
 to be zero, and all wanted degenerations can be got by setting $c$s in several above equations. 
-%We should see what happens when we set $c$s to be zero in only one above equations: 
-{\bf (proof?)}
 
-The basic idea for counting: Suppose that
+We can see what happens from mesh when we set $c$s to be zero in only one above equations: an equation above corresponds a big diamond whose top or bottom corner and all $c$s are zero. For example,
+\begin{center}
+	\begin{tikzpicture}
+		\draw (-2,0) node[left] {$A$} -- (1,-3) node[below] {$0$}
+		-- (3,-1) node[right] {$C$} -- (0,2) node[above] {$B$}-- cycle;
+		\draw (-1,-1) -- (1,1);
+		\draw (-1,1) -- (2,-2);
+		\draw (0,-2) -- (2,0);
+			\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (1,1) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (0,2) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (-1,1) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (0,0) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (1,-1) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (2,0) {};
+	\end{tikzpicture}
+\end{center}
+this diamond tells us that
 \[
-F_{ac}+F_{bd}-F_{ad}=0.
+A+C-B=0.
 \]
-Since $F_{ad}$, $F_{bd}$, $F_{ac}\geq 0$, the above equation force $F_{ac}$ and $F_{bd}$ to be zero when $F_{ad}=0$. Therefore, $F_{ad}$ cannot be a true facet of the degeneration. We should count the number of deleted $c$ and such spurious facets. They should be equal. 
+Since $A,B,C\geq 0$, the above equation force $A$ and $C$ to vanish when $B=0$. Therefore, $B$ is no longer a facet of the degeneration. Similarly, it's pleasure to show that black points are all vanishing facets in the above example, and generally
+the number of vanishing facets equals the number of deleted $c$s for degenerations of this type.
+
+One can use these diamonds to build a degeneration with more vanishing facets. For example, in $A_3$
+\begin{center}
+\begin{tikzpicture}
+	\fill[green!30] (2,1) -- (0,-1) -- (1,-2) -- (3,0);
+	\fill[blue!30] (3,0) -- (2,-1) -- (3,-2) -- (4,-1);
+	\draw[thick] (-2,-1) -- (1,2) -- (4,-1) -- (3,-2) -- (0,1);
+	\draw[thick] (-1,-2) -- (2,1);
+	\draw[thick] (-2,-1) -- (-1,-2);
+	\draw[thick] (-1,0) -- (1,-2) -- (3,0);
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (1,0) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (2,1) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (3,0) {};
+\end{tikzpicture}
+\end{center}
+after setting $c$s in green and purple diamonds to be zero, three facets (black points) vanish and building set after deletion is 
+\[
+\{\{0,1,2,3\},\{0,1,2\},\{0,1\},\{0\},\{1\},\{2\},\{3\}\}.
+\]
+One can further check that it's a cube or $A_1^3$.
 
 (Conjecture: they are all binary.)
 
