--- a/draft_ABP.tex
+++ b/draft_ABP.tex
@@ -1318,7 +1318,7 @@ From the following equations for facets $\{F_{ij}\}$ of $A_n$
 \[
 F_{ac}+F_{bd}-F_{bc}-F_{ad}=\sum_{a\leq p<b\atop{c\leq q<d}}c_{pq}
 \]
-for $1\leq a<b<c<d\leq n+3$, ({\bf Zhenjie}: I conjecture that) we find the most economical way to get a degeneration which satisfies the above property is setting all $c$s on the RHS of 
+for $1\leq a<b<c<d\leq n+3$, an economical way to get a degeneration which satisfies the above property is setting all $c$s on the RHS of 
 \begin{align*}
     &F_{ac}+F_{bd}-F_{ad}=\sum_{a\leq p<b< q<d}c_{pq}\quad \text{for $a<b<c=b+1<d$ }\\
     \text{or}&\\
@@ -1326,9 +1326,9 @@ for $1\leq a<b<c<d\leq n+3$, ({\bf Zhenjie}: I conjecture that) we find the most
 \end{align*}
 to be zero, and all wanted degenerations can be got by setting $c$s in several above equations. 
 
-We can see what happens from mesh when we set $c$s to be zero in only one above equations: an equation above corresponds a big diamond whose top or bottom corner and all $c$s are zero. For example,
+From the viewpoint of mesh, an equation above corresponds a big diamond whose top or bottom corner and all $c$s are zero. For example,
 \begin{center}
-	\begin{tikzpicture}
+	\begin{tikzpicture}[baseline={([yshift=-.5ex]current bounding box.center)}]
 		\draw (-2,0) node[left] {$A$} -- (1,-3) node[below] {$0$}
 		-- (3,-1) node[right] {$C$} -- (0,2) node[above] {$B$}-- cycle;
 		\draw (-1,-1) -- (1,1);
@@ -1341,12 +1341,27 @@ We can see what happens from mesh when we set $c$s to be zero in only one above 
 	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (1,-1) {};
 	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (2,0) {};
 	\end{tikzpicture}
+	\qquad \text{or}
+	\qquad
+	\begin{tikzpicture}[baseline={([yshift=-.5ex]current bounding box.center)}]
+		\draw (-2,0) node[left] {$A$} -- (1,-3) node[below] {$B$}
+		-- (3,-1) node[right] {$C$} -- (0,2) node[above] {$0$}-- cycle;
+		\draw (-1,-1) -- (1,1);
+		\draw (-1,1) -- (2,-2);
+		\draw (0,-2) -- (2,0);
+			\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (0,0) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (1,-3) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (-1,-1) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (0,-2) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (2,-2) {};
+	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (1,-1) {};
+	\end{tikzpicture}
 \end{center}
-this diamond tells us that
+we can see that
 \[
 A+C-B=0.
 \]
-Since $A,B,C\geq 0$, the above equation force $A$ and $C$ to vanish when $B=0$. Therefore, $B$ is no longer a facet of the degeneration. Similarly, it's pleasure to show that black points are all vanishing facets in the above example, and generally
+Since $A,B,C\geq 0$, the above equation force $A$ and $C$ to vanish when $B=0$. Therefore, $B$ is no longer a facet of the degeneration. Similarly, black points are all vanishing facets in the above example, and generally
 the number of vanishing facets equals the number of deleted $c$s for degenerations of this type.
 
 One can use these diamonds to build a degeneration with more vanishing facets. For example, in $A_3$
@@ -1361,15 +1376,55 @@ One can use these diamonds to build a degeneration with more vanishing facets. F
 	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (1,0) {};
 	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (2,1) {};
 	\node[circle,draw=black, fill=black, inner sep=0pt,minimum size=5pt] at (3,0) {};
+	\node at (-2.5,-1) {$\{0\}$};
+\node at (-0.5,-1) {$\{1\}$};
+\node at (1.5,-1) {$\{2\}$};
+\node at (3.5,-1) {$\{3\}$};
+\node at (-1.6,0) {$\{0,1\}$};
+\node at (0.4,0) {$\{1,2\}$};
+\node at (2.4,0) {$\{2,3\}$};
+\node at (-0.8,1) {$\{0,1,2\}$};
+\node at (1.2,1) {$\{1,2,3\}$};
+\node at (1,2.2) {$\{0,1,2,3\}$};
 \end{tikzpicture}
 \end{center}
 after setting $c$s in green and purple diamonds to be zero, three facets (black points) vanish and building set after deletion is 
 \[
-\{\{0,1,2,3\},\{0,1,2\},\{0,1\},\{0\},\{1\},\{2\},\{3\}\}.
+\{\{0,1,2,3\},\{0,1,2\},\{1,2,3\},\{0,1\},\{2,3\},\{0\},\{3\}\}.
 \]
-One can further check that it's a cube or $A_1^3$.
 
-(Conjecture: they are all binary.)
+Suppose $\mathscr D$ is the set of all vanishing facets in the building set, we can read from the mesh that
+\[
+F_{I'}=\sum_{I\not\in \mathscr D}M_{I'}^IF_I
+\]
+for any $I'\in \mathscr D$, where $M$ is a matrix with non-negative entries. Therefore,
+\[
+\prod_{I\in \mathscr A_n}u_{I}^{F_{I}}=
+\prod_{I'\in \mathscr D}u_{I'}^{F_{I'}}
+\cdot
+\prod_{I\not\in \mathscr D}u_{I}^{F_{I}}=
+\prod_{I\not\in \mathscr D}\biggl(
+u_I\prod_{I'\in \mathscr D}u_{I'}^{M_{I'}^I}
+\bigg)^{F_I},
+\]
+so the new $u$-variables of the degeneration are
+\[
+    \tilde u_{I}=u_I\prod_{I'\in \mathscr D}u_{I'}^{M_{I'}^I}
+\]
+for any $I\not\in \mathscr D$. 
+%From the viewpoint of mesh, the product are taken over all diamonds whose $c$s are all zero, top (respectively, bottom) corner is a deleted element $I'$, bottom (respectively, top) corner is 0 and left or right corner is $I$, because for such diamond $F_{I'}=F_I+\cdots$ or $M^I_{I'}=1$.
+For example, in the above example of $A_3$,
+\[
+F_{123}=F_{1}+F_2+F_3, \quad F_{12}=F_1+F_2, \quad F_{23}=F_2+F_3,
+\]
+so 
+\begin{align*}
+\tilde u_{1}&=u_1 u_{123} u_{12}=\frac{x_1x_{012}}{x_{12}x_{01}}\frac{x_{123}}{x_{0123}}\frac{x_{12}x_{0123}}{x_{123}x_{012}}=\frac{x_1}{x_{01}},\\
+\tilde u_{2}&=u_2 u_{123} u_{12}u_{23}=\frac{x_2x_{123}}{x_{23}x_{12}}\frac{x_{123}}{x_{0123}}\frac{x_{12}x_{0123}}{x_{123}x_{012}}\frac{x_{23}}{x_{123}}=\frac{x_{2}}{x_{012}},\dots
+\end{align*}
+
+
+(Conjecture: they are all binary. In fact, I guess that $\tilde u_I\to 0$ is still given by $x_i\to 0$ for $i\in I$, then Chi's proof can be applied here.)
 
 (Find those with perfect $u$-eq?)
 
